Fixed section-intro--center alignment

--- a/resources/css/components/_section-intro.scss
+++ b/resources/css/components/_section-intro.scss
@@ -1,4 +1,5 @@
 .section-intro--center {
+  display: grid;
   justify-items: center;
   text-align: center;
 }
